fully functional app

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,8 @@
 {
   "development": {
-    "database": "unit2_development",
+    "username": "postgres",
+    "password": "newPassword",
+    "database": "unit2_assessment",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
